chore:modify makefile for easier runnig

--- a/src/app/Makefile
+++ b/src/app/Makefile
@@ -5,7 +5,7 @@ OBJECTS = $(SOURCES:.cpp=.o)
 CCFLAGS += -fPIC
 
 %.o: %.cpp
-	$(CC) $(CCFLAGS) $< -c
+	$(CC) $(CCFLAGS) $(LDFLAGS) $< -c
 
 all: $(OBJECTS)
 
