--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,8 @@ export CC = g++
 
 export CCFLAGS = -g -std=c++0x -Wall
 
-export LDFLAGS = -Lcore -L/usr/lib/python3.5/config-3.5m-x86_64-linux-gnu/ -lpython3.5 -lstdc++ -lpthread -lm
+# hesy: add the path for running
+export LDFLAGS = -Wl,-rpath=./core -Lcore -L/usr/lib/python3.5/config-3.5m-x86_64-linux-gnu/ -lpython3.5 -lstdc++ -lpthread -lm
 
 LIB_SOURCES = $(wildcard core/*.cpp)
 LIB_SOURCES += $(wildcard pcc/monitor_interval/*.cpp)
